--- a/notebooks/makesubmission.ipynb
+++ b/notebooks/makesubmission.ipynb
@@ -53,11 +53,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_sample_submission(model, images_path:Path, conf):\n",
+    "def make_sample_submission(model, images_path:Path, conf, modelname):\n",
     "    header = ['filename', 'class_id', 'rel_x', 'rel_y', 'width', 'height']\n",
     "    arr = []\n",
     "\n",
-    "    filename = f'submission_{model}_{conf}.csv'\n",
+    "    filename = f'submission_{modelname}_{conf}.csv'\n",
     "\n",
     "    results = model.predict(images_path, conf=conf, stream=True)\n",
     "    for image in results:\n",
@@ -85,9 +85,9 @@
    "source": [
     "conf = 0.5 #For tests\n",
     "\n",
-    "make_sample_submission(model_yolov10,IMAGE_PATH, conf)\n",
-    "make_sample_submission(model_yolov8,IMAGE_PATH, conf)\n",
-    "make_sample_submission(model_DETR,IMAGE_PATH, conf) "
+    "make_sample_submission(model_yolov10,IMAGE_PATH, conf, 'yolo10')\n",
+    "make_sample_submission(model_yolov8,IMAGE_PATH, conf, 'yolo8')\n",
+    "make_sample_submission(model_DETR,IMAGE_PATH, conf, 'detr') "
    ]
   }
  ],
